--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,32 @@
-# Project folders #
-###################
-.idea/*
-.bsp/*
-project/*
-target/*
+### IntelliJ IDEA ###
+out/
+*.iml
+.idea/
 
+!**/src/main/**/out/
+!**/src/test/**/out/
 
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
 
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
 
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
+### VS Code ###
+.vscode/
 
-# OS generated files #
-######################
+### Mac OS ###
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
